--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "submodules/externals/minizip"]
-	path = submodules/externals/minizip
-	url = ../../public/external/minizip.git
 [submodule "linphone-sdk"]
-	path = linphone-sdk
-	url = ../../public/linphone-sdk.git
+path = linphone-sdk
+	url = https://gitlab.linphone.org/BC/public/linphone-sdk.git
+[submodule "plugins/contacts/contacts-api"]
+	path = plugins/contacts/contacts-api
+	url =  https://gitlab.linphone.org/BC/public/linphone-desktop-plugins/contacts/contacts-api.git
