Fix install targets

--- a/linphone-app/CMakeLists.txt
+++ b/linphone-app/CMakeLists.txt
@@ -43,7 +43,7 @@ include(CheckCXXCompilerFlag)
 
 
 set(TARGET_NAME linphone-qt)
-SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS true)
+set_property(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS true)
 set(CMAKE_CXX_STANDARD 11)
 
 if(UNIX AND NOT APPLE)
