--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -96,7 +96,9 @@ endif ()
 
 install(TARGETS ${APP_PLUGIN} 
 	ARCHIVE DESTINATION "${LIBDIR}"
-	LIBRARY DESTINATION "${LIBDIR}")
+	LIBRARY DESTINATION "${LIBDIR}"
+	RUNTIME DESTINATION "${LIBDIR}"
+	)
 
 # ==============================================================================
 # Specific deployment.
@@ -188,7 +190,9 @@ elseif (APPLE)
   endforeach ()
   install(TARGETS ${APP_PLUGIN} 
 	  ARCHIVE DESTINATION "${APPLICATION_NAME}.app/Contents/Frameworks"
-	  LIBRARY DESTINATION "${APPLICATION_NAME}.app/Contents/Frameworks" )
+	  LIBRARY DESTINATION "${APPLICATION_NAME}.app/Contents/Frameworks" 
+	  RUNTIME DESTINATION "${APPLICATION_NAME}.app/Contents/Frameworks"
+	  )
   install(CODE "execute_process(COMMAND install_name_tool -add_rpath \"@executable_path/../Frameworks/\" \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/MacOS/${EXECUTABLE_NAME}\")")
   install(CODE "execute_process(COMMAND install_name_tool -add_rpath \"@executable_path/../lib/\" \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/MacOS/${EXECUTABLE_NAME}\")")
   if(ENABLE_APP_PACKAGING)
